更新as配置，更新Android开发技巧介绍